cmake_minimum_required(VERSION 3.23)
project(untitled)

set(CMAKE_CXX_STANDARD 14)

add_executable(untitled main.cpp sample.cpp demo.cpp demo2.cpp Assign1.cpp Assign3.cpp demo3.cpp demo4.cpp demo5.cpp Assign4.cpp Day3/demo.cpp Day3/demo2.cpp Day3/demo3.cpp Day3/demo4.cpp Day3/demo5.cpp Day3/demo6.cpp Day3/demo7.cpp Day3/demo8.cpp Day3/demo9.cpp Day3/demo10.cpp Day3/demo11.cpp Day3/Day4/Assign1.cpp Day3/Day4/Assign2.cpp Day3/Day4/demo1.cpp Day3/Day4/demo2.cpp Day3/Day4/demo3.cpp Day3/Day4/demo4.cpp Day3/Day4/demo5.cpp Day3/Day4/demo6.cpp Day3/Day4/demo7.cpp Day3/Day4/demo8.cpp Day3/Day4/demo9.cpp Day3/Day4/Day5/demo1.cpp)
